Correct minimum required java version in dcs scripts. #1509